Fixed test to use random port